# dispo-rusty

./: .dockerignore  .env.example  .gitignore  .nixpacksignore  Actix_Web_Multi_Tenant_REST_API.postman_collection.json  BACKEND_FUNCTIONAL_ENHANCEMENT_TASKLIST.md  Cargo.toml  Dockerfile.github-action  Dockerfile.local  Dockerfile.sevalla  FUNCTIONAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TASK_LIST.md  MASTER_TASK_LIST.md  Makefile  README.md  TESTING_STRATEGY_IMPLEMENTATION.md  TEST_COVERAGE_ADDITIONS.md  TEST_COVERAGE_SUMMARY.md  TEST_SUMMARY.md  TechSpecs.txt  build.rs  db.techspecs.txt  docker-compose.local.yml  docker-compose.prod.yml  insert_tenants.sql  nixpacks.toml  package.json  reviews.profile  rust-toolchain.toml  static-analysis.datadog.yml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci_action.yml  docker_action.yml
benches/: functional_benchmarks.rs
docs/: ADR-001-FUNCTIONAL-PATTERNS.md  BEST-PRACTICES-FUNCTIONAL-PATTERNS.md  DEVELOPER-GUIDE-FUNCTIONAL-PATTERNS.md  FP-013_SERVICE_LAYER_REFACTORING_SUMMARY.md  FP-015_PERFORMANCE_MONITORING_IMPLEMENTATION.md  FUNCTIONAL_PATTERNS_QUICK_GUIDE.md  MIGRATION-GUIDE-FUNCTIONAL-PATTERNS.md  PAGINATION_PERFORMANCE_REPORT.md  PERFORMANCE.md  database_performance_test.sql  generate_test_data.sql  generate_test_data_fixed.sql  pagination_performance_tests.sql  test_performance.sh
frontend/: .env.example  .env.production  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .sevalla.yml  COVERAGE_ACHIEVEMENT_SUMMARY.md  DEPLOYMENT.md  ERROR_FIXING_SUMMARY.md  PHASE_10_COMPLETION.md  QUICKSTART.md  README.md  TASK_LIST.md  TEST_FIX_SUMMARY.md  TYPE_FIXES_SUMMARY.md  Technical Specifications.md  Template Bun.run.xml  astro.config.mjs  bunfig.toml  doyourthing.json  eslint.config.js  fix-typescript-errors.sh  happydom.ts  index.html  loadenv.ts  package-lock.json  package.json  re.md  tailwind.config.ts  test-failures.txt  test-output-current.txt  test-output-fixed.txt  test-output.txt  tsconfig.json  vite.config.ts
frontend/.cursor/rules/: use-bun-instead-of-node-vite-npm-pnpm.mdc
frontend/.github/instructions/: ne2w.instructions.md
frontend/docs/: BACKEND_TENANT_SCHEMA.sql  COMMON_PASSWORDS_MIGRATION.md  CQ-001-002-IMPLEMENTATION-SUMMARY.md  DOCUMENTATION_INDEX.md  ENHANCED_SEARCH_IMPLEMENTATION.md  ERROR_HANDLING.md  FP_PATTERNS_GUIDE.md  FP_REFACTORING_STRATEGY.md  MIGRATION_GUIDE.md  PHASE_10_BUNDLE_OPTIMIZATION.md  PHASE_10_IMPLEMENTATION.md  PHASE_11_COMPLETION_SUMMARY.md  PHASE_11_DOCUMENTATION_INDEX.md  PHASE_11_FINAL_CHECKLIST.md  PHASE_11_IMPLEMENTATION.md  PHASE_11_MASTER_SUMMARY.md  PHASE_11_SUMMARY.md  PHASE_12_DOCUMENTATION_INDEX.md  PHASE_12_MIGRATION_PLAN.md  PHASE_12_MONITORING_DASHBOARD.md  PHASE_12_README.md  PHASE_12_SUMMARY.md  PHASE_12_TRAINING_PROGRAM.md  PHASE_3_IMPLEMENTATION.md  PHASE_3_SUMMARY.md  PHASE_4_IMPLEMENTATION.md  PHASE_4_QUICK_REFERENCE.md  PHASE_4_SUMMARY.md  PHASE_5_AND_6_IMPLEMENTATION.md  PHASE_5_IMPLEMENTATION.md  PHASE_5_QUICK_REFERENCE.md  PHASE_5_SUMMARY.md  PHASE_6_COMPLETION_SUMMARY.md  TENANT_API_ENDPOINTS.md  TENANT_ARCHITECTURE.md  TEST_IMPLEMENTATION_SERVICES_LAYER.md  TYPE_SAFETY.md
frontend/exotic-escape/: package-lock.json  package.json
frontend/frontend-astro/: package-lock.json
frontend/public/: _redirects  app.js  index-script.js  index.html  manifest.json
frontend/public/config/: common-passwords-1000.json  common-passwords.json
frontend/scripts/: validate-env.js
frontend/src/: App.tsx  index.ts  main.tsx  vite-env.d.ts
frontend/src/__tests__/: errorHandling.test.ts
migrations/2025-01-01-000000_create_tenants_table/: up.sql
migrations/2025-10-10-233036-0000_add_unique_email_constraint/: down.sql  up.sql
migrations/2025-10-10-233121-0000_add_active_field_to_users/: down.sql  up.sql
migrations/2025-10-10-233410-0000_create_refresh_tokens_table/: down.sql  up.sql
migrations/2025-10-11-020109-0000_create_nfe_schema/: down.sql  up.sql
migrations/2025-10-11-124244-0000_change_login_history_user_id_to_int4/: down.sql  up.sql
src/: constants.rs  error.rs  integration_test_fixes.rs  lib.rs  main.rs  pagination.rs  schema.rs  secret.key
src/api/: account_controller.rs  address_book_controller.rs  health_controller.rs  mod.rs  ping_controller.rs  tenant_controller.rs  user_controller.rs
src/config/: app.rs  cache.rs  db.rs  functional_config.rs  mod.rs
src/functional/: backward_compatibility.rs  chain_builder.rs  concurrent_processing.rs  function_traits.rs  functional_tests.rs  immutable_state.rs  iterator_engine.rs  lazy_pipeline.rs  mod.rs  pagination.rs  parallel_iterators.rs  performance_monitoring.rs  pure_function_registry.rs  query_builder.rs  query_composition.rs  response_transformers.rs  state_transitions.rs  validation_engine.rs  validation_integration.rs  validation_rules.rs
src/middleware/: auth_middleware.rs  functional_middleware.rs  mod.rs
src/models/: filters.rs  login_history.rs  mod.rs  nfe_cofins.rs  nfe_document.rs  nfe_emitter.rs  nfe_icms.rs  nfe_ipi.rs  nfe_item.rs  nfe_pis.rs  nfe_product.rs  nfe_recipient.rs  pagination.rs  pagination_old.rs  person.rs  refresh_token.rs  response.rs  tenant.rs  user.rs  user_token.rs
src/services/: account_service.rs  address_book_service.rs  functional_patterns.rs  functional_service_base.rs  mod.rs
src/utils/: mod.rs  token_utils.rs
tests/: config_validation_test.rs  functional_tests.rs  test_pagination_performance.rs
(+157 files in other folders)
