[package]
name = "rcs"
version = "0.1.0"
authors = ["Hai Phan <bahaimt@gmail.com>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-service = "2.0.2"
actix-cors = "0.6.4"
log = "0.4.18"
env_logger = "0.10.0"
diesel_migrations = "2.1.0"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
dotenv = "0.15.0"
futures = "0.3.28"
derive_more = "0.99.17"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
base64 = "0.21.2"
redis = "0.32.7"
r2d2 = "0.8.10"
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "fs", "io-util", "sync", "time", "macros"] }
notify = "6.1"
tokio-stream = "0.1"
url = "2.4"
itertools = { version = "0.14", optional = true }
rayon = { version = "1.11", optional = true }
im = "15.1"
thiserror = "2.0.17"
regex = "1.10"
once_cell = "1.18"
num_cpus = "1.17"

[dependencies.diesel]
version = "2.1.0"
features = ["postgres", "r2d2", "chrono"]

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.uuid]
version = "1.3.3"
features = ["v4"]

[features]
default = []  # Disable functional features by default for faster builds
functional = ["dep:itertools", "dep:rayon"]

[dev-dependencies]
testcontainers = "0.14.0"
tempfile = "3.8"

[profile.dev]
opt-level = 1           # Basic optimizations for faster builds
codegen-units = 16      # More codegen units for parallel compilation
debug = true            # Keep debug info
incremental = true      # Enable incremental compilation

[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"            # Link-time optimization across all crates
codegen-units = 1      # Single codegen unit = better optimization
strip = true           # Strip symbols
panic = "abort"        # Smaller binary, faster panics

[profile.release.package."*"]
opt-level = 3
